# SLOTH

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  DOCPROTO.md  INSTALLATION.md  NotesDev.md  PhaseFieldDoxyfile  README.md  config.mk  envDarwinSloth.sh  envSloth.sh  main.cpp  makefile  myEnv.sh
doc/: CMakeLists.txt  CodeDocumentation.dox  CodeSloth.md  Doxyfile.cmake  mkdocs.yml.cmake
doc/css/: customization.css
doc/docs/: about.md  index.md
doc/docs/Started/: examples.md  howto.md  installation.md  template_example.md
doc/docs/VerifValid/: VV.md
kernel/: CMakeLists.txt  sloth.hpp
kernel/AnalyticalFunctions/: AnalyticalFunctions.hpp
kernel/BCs/: Boundary.hpp  BoundaryConditions.hpp
kernel/Calphad/: AnalyticalIdealSolution.hpp  AnalyticalParaboloidForTwoPhase.hpp  BinaryTabulation.hpp  CalphadBase.hpp  CalphadInformedNeuralNetwork.hpp  CalphadUtils.hpp  GeneralMultiParamsTabulation.hpp  KKS.hpp  MultiParamsTabulation.hpp
kernel/Coefficients/: AnalyticalFunctions.hpp  ConductivityCoefficient.hpp  ConductivityFunctions.hpp  DensityCoefficient.hpp  DensityFunctions.hpp  DiffusionCoefficient.hpp  DiffusionCoeffients.hpp  DiffusionFunctions.hpp  EnergyCoefficient.hpp  HeatCapacityCoefficient.hpp  HeatCapacityFunctions.hpp  LambdaCoefficient.hpp  LambdaFunctions.hpp  MobilityCoefficient.hpp  MobilityFunctions.hpp  OmegaCoefficient.hpp  OmegaFunctions.hpp  PhaseChangeFunction.hpp  PhaseFieldMobilities.hpp  PhaseFieldOptions.hpp  PhaseFieldPotentials.hpp  SourceTermCoefficient.hpp
kernel/Convergence/: Convergence.hpp  PhysicalConvergence.hpp
kernel/Couplings/: Coupling.hpp
kernel/Inputs/: HDF54Sloth.hpp
kernel/Integrators/: AllenCahnBlockNLFormIntegrator.hpp  AllenCahnCalphadMeltingNLFormIntegrator.hpp  AllenCahnConstantMeltingNLFormIntegrator.hpp  AllenCahnDiffusionMeltingNLFormIntegrator.hpp  AllenCahnGrainsNLFormIntegrator.hpp  AllenCahnMeltingBaseNLFormIntegrator.hpp  AllenCahnMeltingNLFormIntegrator.hpp  AllenCahnNLFormIntegrator.hpp  AllenCahnTemperatureMeltingNLFormIntegrator.hpp  BinaryInterDiffusionNLFormIntegrator.hpp  BlockAllenCahnNLFormIntegrator.hpp  CahnHilliardNLFormIntegrator.hpp  DiffusionFluxNLFormIntegrator.hpp  DiffusionNLFIntegrator.hpp  DiffusionNLFormIntegrator.hpp  HeatNLFormIntegrator.hpp  InterDiffusionNLFormIntegrator.hpp  MassDiffusionFluxNLFormIntegrator.hpp  SlothGridFunction.hpp  SlothNLFormIntegrator.hpp  TernaryInterDiffusionNLFormIntegrator.hpp  ThermalDiffusionFluxNLFormIntegrator.hpp  ThermoDiffusionNLFormIntegrator.hpp  TimeCHNLFormIntegrator.hpp  TimeNLFormIntegrator.hpp
kernel/Interpolators/: MultiLinearInterpolator.hpp
kernel/MAToolsProfiling/: Column.hxx  EnumTimer.hxx  MADebug.hxx  MAMemory.hxx  MAMemory.ixx  MAOutput.hxx  MAOutputManager.hxx  MAOutputManager.ixx  MATimerInfo.hxx  MATimerMPI.hxx  MATimerNode.hxx  MATimerNode.ixx  MATimerOptional.hxx  MATimerOptional.ixx  MATimers.hxx  MATimers.ixx  MATimersAPI.hxx  MATimersFullTreeMode.hxx  MATimersFullTreeMode.ixx  MATimersVerbosity.hxx  MATimersVerbosity.ixx  MAToolsDecoration.hxx  MAToolsMPI.hxx  MAToolsMPI.ixx  Timer.hxx  Timer.ixx
kernel/Mesh-examples/: camembert.geo  camembert.msh  camembert2D.000000  camembert2D.000001  camembert2D.000002  camembert2D.000003  camembert2D.msh  camembert2D_spot.msh  camembertMelting.msh  meshPellet_Inclusion.py  mesh_poly.geo  pellet2Dinclusion.msh  periodic.geo  periodic.msh  slothLogo  slothLogo.geo  slothLogo.msh  slothLogo.vtk  slothLogo_ori.geo
kernel/Operators/: AllenCahnOperator.hpp  DiffusionOperator.hpp  HeatOperator.hpp  OperatorBase.hpp  PhaseFieldOperator.hpp  PhaseFieldOperatorBase.hpp  PhaseFieldOperatorMelting.hpp  ReducedOperator.hpp  SteadyOperatorBase.hpp  SteadyPhaseFieldOperatorBase.hpp  SteadyReducedOperator.hpp  TransientOperatorBase.hpp
kernel/Options/: AnalyticalFunctionOptions.hpp  CalphadOptions.hpp  DiffusionOptions.hpp  Options.hpp  PhaseFieldOptions.hpp  PhysicalConvergenceOptions.hpp  PhysicalPropertiesOptions.hpp  ProblemsOptions.hpp  SolversOptions.hpp  SpatialOptions.hpp  TimeOptions.hpp
kernel/Parameters/: Parameter.hpp  Parameters.hpp
kernel/PostProcessing/: postprocessing.hpp
kernel/Problems/: Calphad_problem.hpp  InterfaceProblem.hpp  MPIProblem.hpp  Problem.hpp  ProblemBase.hpp  PropertyProblem.hpp
kernel/Profiling/: Profiling.hpp  Timer.hpp  UtilsforOutput.hpp  output.hpp  timers.hpp
kernel/Property/: InterDiffusionCoefficient.hpp  NucleationProperty.hpp  PropertyBase.hpp
kernel/Solvers/: DSolverBase.hpp  HPrecondBase.hpp  HSolverBase.hpp  IPrecondBase.hpp  ISolverBase.hpp  LSolver.hpp  NLSolver.hpp  NLSolverBase.hpp  SlothSolver.hpp  Solver.hpp  SolverBase.hpp
kernel/Spatial/: Spatial.hpp
kernel/Time/: Time.hpp
kernel/Utils/: AnalyticalFunctions.hpp  PhaseFieldConstants.hpp  PhaseFieldOptions.hpp  Utils.hpp  UtilsForData.hpp  UtilsForDebug.hpp  UtilsForOptions.hpp  UtilsForPostProcessing.hpp  UtilsForSlothProto.hpp  UtilsForTensorialAlgebra.hpp  UtilsForVariants.hpp
kernel/Variables/: Variable.hpp  Variables.hpp
prototype/: CMakeLists.txt  DOCPROTO.md  README.md
prototype/data/config/: main-config.msp
prototype/src/: CMakeLists.txt
prototype/src/plugin/: CMakeLists.txt  generate_hypercube.cpp  init_sloth.cpp  post_processing.cpp  print_log.cpp  set_bcs.cpp  set_default_coupling.cpp  set_problem.cpp  set_time_discretization.cpp  set_variables_test1.cpp  solve.cpp
prototype/test/: TestAllenCahn3D.msp  test3D.msp
tests/: CMakeLists.txt  tests.hpp
tests/AllenCahn/: CMakeLists.txt
tests/AllenCahn/2D/: CMakeLists.txt
tests/AllenCahn/3D/: CMakeLists.txt
tests/Bench/: CMakeLists.txt  main.cpp
tests/CHC/: CMakeLists.txt
tests/CHC/2D/: CMakeLists.txt
tests/CahnHilliard/2D/: CMakeLists.txt
tests/Calphad/: CMakeLists.txt
tests/Diffusion/: CMakeLists.txt
tests/HeatTransfer/: CMakeLists.txt
tests/Profiling/test1/: CMakeLists.txt  description.md  main.cpp
tests/Profiling/test2/: CMakeLists.txt  (+2 more)
tests/Utilities/: CMakeLists.txt
tests/tools/: col_compare.py  convergence_study.py  plot_position.gnu  sloth_visu.py
(+1243 files in other folders)
