add_subdirectory(AllenCahn)
add_subdirectory(Diffusion)
add_subdirectory(Profiling)
add_subdirectory(HeatTransfer)
add_subdirectory(SimpleCoupling)
add_subdirectory(Calphad)
add_subdirectory(CHC)
# add_subdirectory(CahnHilliard)
# EXTERNAL ??
if((SLOTH_USE_EXTERNAL OR SLOTH_USE_AUTO_EXTERNAL) AND NOT "$ENV{EXT_TEST}" STREQUAL "")
    add_subdirectory($ENV{EXT_TEST} "external")
endif()